--- a/grocerylist.net/grocerylist.net.csproj
+++ b/grocerylist.net/grocerylist.net.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8" />
     <PackageReference Include="MySqlConnector" Version="0.66.0" />
   </ItemGroup>
 
