--- a/grocerylist.net/appsettings.Development.json
+++ b/grocerylist.net/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Connector": {
+    "Default": "test connector",
+    "Security": "security connector"
   }
 }
