setup simple user for now & no auth

--- a/GroceryList.Mvc/appsettings.Development.json
+++ b/GroceryList.Mvc/appsettings.Development.json
@@ -7,6 +7,13 @@
     }
   },
   "Data": {
-    "Path": ""
+    "Path": "./.data"
+  },
+  "DebugUser": {
+    "Id": "8d058a21-4a00-4007-ae1e-f2f7f3509421",
+    "HomeId": "36b77871-d485-4dca-9d5d-913e6372cde2",
+    "Email": "tester@test.local",
+    "FirstName": "John",
+    "LastName": "Doe"
   }
 }
