--- a/GroceryList.Mvc/GroceryList.Mvc.csproj
+++ b/GroceryList.Mvc/GroceryList.Mvc.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" Version="2.2.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.5" />
   </ItemGroup>
 
