--- a/GroceryList.Mvc/GroceryList.Mvc.csproj
+++ b/GroceryList.Mvc/GroceryList.Mvc.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="5.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" Version="2.2.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.5" />
