--- a/GroceryList/appsettings.Development.json
+++ b/GroceryList/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+   "ConnectionStrings": {
+      "DefaultConnection": "Server=.\\SQLEXPRESS;Database=Groceries;Trusted_Connection=True;MultipleActiveResultSets=true"
+   },
+   "Logging": {
+      "LogLevel": {
+         "Default": "Information",
+         "Microsoft": "Warning",
+         "Microsoft.Hosting.Lifetime": "Information"
+      }
+   }
 }
