using MVC & setting up views

--- a/GroceryList/appsettings.Development.json
+++ b/GroceryList/appsettings.Development.json
@@ -9,5 +9,8 @@
          "Microsoft": "Warning",
          "Microsoft.Hosting.Lifetime": "Information"
       }
+   },
+   "DataService": {
+      "DataPath": "D:\\data\\groceries"
    }
 }
