--- a/GroceryList/appsettings.Development.json
+++ b/GroceryList/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-   "ConnectionStrings": {
+   /*"ConnectionStrings": {
       "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GroceryList-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
-   },
+   },*/
    "DetailedErrors": true,
    "Logging": {
       "LogLevel": {
@@ -11,6 +11,8 @@
       }
    },
    "DataService": {
-      "DataPath": "D:\\data\\groceries"
+      "DataPath": "D:\\data\\groceries",
+      "DataPathWindows": "D:\\data\\groceries",
+      "DataPathLinux": "/tmp/groceries"
    }
 }
