--- a/GroceryList/appsettings.Development.json
+++ b/GroceryList/appsettings.Development.json
@@ -12,6 +12,6 @@
    },
    "DataService": {
       "DataPath": "D:\\data\\groceries",
-      "DataPathLinux": "/tmp/groceries"
+      "DataPathLinux": "/vault/groceries/data" //"/tmp/groceries"
    }
 }
