moving to .net 6 & nullable ref types

--- a/GroceryList/GroceryList.csproj
+++ b/GroceryList/GroceryList.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <UserSecretsId>aspnet-GroceryList-7E21D695-587E-43FE-909E-E56A07E398FE</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
