db setup & cleanup for MariaDB

--- a/GroceryList/GroceryList.csproj
+++ b/GroceryList/GroceryList.csproj
@@ -8,10 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\Sql\DB_Setup.sql" />
     <None Remove="Data\Sql\Home_Create.sql" />
     <None Remove="Data\Sql\Item_Get.sql" />
     <None Remove="Data\Sql\List_Get.sql" />
     <None Remove="Data\Sql\PreviousTrips_Get.sql" />
+    <None Remove="Data\Sql\PreviousTrip_Get.sql" />
+    <None Remove="Resources\Grocery\AddOrUpdate.sql" />
+    <None Remove="Resources\Grocery\Checkout.sql" />
+    <None Remove="Resources\Grocery\CreateHome.sql" />
+    <None Remove="Resources\Grocery\DeleteCurrent.sql" />
+    <None Remove="Resources\Grocery\SelectCurrent.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,10 +34,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\Sql\DB_Setup.sql" />
     <EmbeddedResource Include="Data\Sql\Item_Get.sql" />
     <EmbeddedResource Include="Data\Sql\List_Get.sql" />
     <EmbeddedResource Include="Data\Sql\PreviousTrips_Get.sql" />
+    <EmbeddedResource Include="Data\Sql\PreviousTrip_Get.sql" />
     <EmbeddedResource Include="Resources\Grocery\AddOrUpdate.sql" />
+    <EmbeddedResource Include="Resources\Grocery\Checkout.sql" />
+    <EmbeddedResource Include="Resources\Grocery\CreateHome.sql" />
+    <EmbeddedResource Include="Resources\Grocery\DeleteCurrent.sql" />
     <EmbeddedResource Include="Resources\Grocery\SelectCurrent.sql" />
   </ItemGroup>
 
