--- a/GroceryList/appsettings.json
+++ b/GroceryList/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UseMariaDB": true,
+  "ConnectionStrings": {
+    "Main": "Server=localhost;Port=3306;Database=grocery-list;Uid=%GROCERY_DB_USER%;Pwd=%GROCERY_DB_PASS%;",
+    "Groceries": "Server=localhost;Port=3306;Database=grocery-list;Uid=%GROCERY_DB_USER%;Pwd=%GROCERY_DB_PASS%;"
+  }
 }
