--- a/GroceryList/appsettings.Development.json
+++ b/GroceryList/appsettings.Development.json
@@ -1,17 +1,20 @@
 {
-   /*"ConnectionStrings": {
-      "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GroceryList-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
-   },*/
-   "DetailedErrors": true,
-   "Logging": {
-      "LogLevel": {
-         "Default": "Information",
-         "Microsoft": "Warning",
-         "Microsoft.Hosting.Lifetime": "Information"
-      }
-   },
-   "DataService": {
-      "DataPath": "D:\\data\\groceries",
-      "DataPathLinux": "/vault/groceries/data" //"/tmp/groceries"
-   }
+  "DetailedErrors": true,
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "DataService": {
+    "DataPath": "D:\\data\\groceries",
+    "DataPathLinux": "/vault/groceries/data" //"/tmp/groceries"
+  },
+  "UseMariaDB": true,
+  "ConnectionStrings": {
+    "Main": "Server=localhost;Port=3306;Database=grocery-list;Uid=%GROCERY_DB_USER%;Pwd=%GROCERY_DB_PASS%;",
+    "Groceries": "Server=localhost;Port=3306;Database=grocery-list;Uid=%GROCERY_DB_USER%;Pwd=%GROCERY_DB_PASS%;"
+    /*"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GroceryList-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"*/
+  }
 }
